# wifiap-binding

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  MAINTAINERS  README.md  manifest.yml.in  wifiap-binding.spec
conf.d/cmake/: config.cmake
conf.d/packaging/: rp-service-wifi-ap.spec  wifiap-binding.spec
conf.d/project/: CMakeLists.txt
conf.d/project/etc/: CMakeLists.txt  wifi-daemon-ap-default-config.json  wifi-rp-service-wifi-ap-default-config.json
conf.d/wgt/: config.xml.in
config/: fd-daemon.rules  nm-daemon.rules  wifi-wifiap-binding-default-config.json
docs/: 1_Architecture.md  2_Installation.md  3_Usage.md  4_Tests.md  api-services-book.yml
lib/: CMakeLists.txt
lib/wifi-ap-utilities/: CMakeLists.txt  wifi-ap-config.c  wifi-ap-config.h  wifi-ap-data.c  wifi-ap-data.h  wifi-ap-thread.c  wifi-ap-thread.h  wifi-ap-utilities.c  wifi-ap-utilities.h
platformAdapterLaunchingScript/: L8_LINK_DESKTOP.sh  LB_LINK.sh
redtest/: CMakeLists.txt  run-redtest  run-redtest.in
scripts/: CMakeLists.txt  LB_LINK.sh  wifi_setup.sh  wifi_setup_test.sh
src/: info.json  wifiAp.c  wifiAp.h
src/lib/: wifi-ap-config.c  wifi-ap-config.h  wifi-ap-data.c  wifi-ap-data.h  wifi-ap-thread.c  wifi-ap-thread.h  wifi-ap-utilities.c  wifi-ap-utilities.h
test/: CMakeLists.txt  lint.sh  tests.py
test/afb-test/etc/: CMakeLists.txt  aft-rp-service-wifi-ap.json
test/afb-test/fixtures/: CMakeLists.txt  run-test.sh
test/afb-test/tests/: CMakeLists.txt  WIFIAPBasicTests.lua
test/test/afb-test/tests/: WIFIAPBasicTests.lua
wifiApBinding/: CMakeLists.txt  utilities.c  utilities.h  wifiAp.c  wifiAp.h
